# cricket-hud

./: .env.example  CLAUDE.md  Cricket_Score_Tracker_Requirements.docx  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
.claude/: settings.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  types.ts
src/components/: MatchList.tsx  OfflineBanner.tsx  PointsTable.tsx  ScoreBar.tsx  SettingsPanel.tsx
src/hooks/: useLiveScores.ts  useMatchDetail.ts  usePointsTable.ts  useSeriesPoints.ts
src/lib/: formatScore.ts  logger.ts
src/store/: appStore.ts
tests/: setup.ts
tests/components/: OfflineBanner.test.tsx  ScoreBar.test.tsx  SettingsPanel.test.tsx
tests/hooks/: useLiveScores.test.ts  useMatchDetail.test.ts  usePointsTable.test.ts  useSeriesPoints.test.ts
tests/lib/: formatScore.test.ts
tests/store/: appStore.test.ts
