[package]
name = "cricket-hud"
version = "0.1.0"
description = "Cricket Score HUD for macOS"
authors = []
edition = "2021"

[lib]
name = "cricket_hud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-notification = { version = "2" }
tauri-plugin-log  = { version = "2", features = ["colored"] }
log               = "0.4"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
